# job-search-automation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: profile.example.yaml  prompt.template.txt
docs/: architecture.md  setup.md
examples/: README.md
launchd/: com.example.jobsearch-weekly.plist.example  com.example.jobsearch.plist.example
scripts/: create_resume.py  extract_linkedin_urls.py  run_job_search.sh  run_weekly_digest.sh  send_daily_digest.py  setup_excel.py  weekly_digest.py
tests/: test_send_daily_digest.py
